--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@
           <div class="col-lg-3 col-md-4">
             <div class="member">
               <div class="pic"><img src="img/user.png" alt=""></div>
-              <h4>Partner and Technical Consultant</h4>
-              <span>Dr.Hanin Banjar</span>
+              <h4>Dr.Hanin Banjar</h4>
+              <span>Partner and Technical Consultant</span>
               <div class="social">
                 
                 <a href=""><i class="fab fa-linkedin"></i></a>
@@ -362,7 +362,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="member">
               <div class="pic"><img src="img/user.png" alt=""></div>
-              <h4>Furat Alfarisi</h4>
+              <h4>Furat Alfarsi</h4>
               <span>CEO</span>
               <div class="social">
                 <a href="https://www.linkedin.com/in/furatalfarsi/"><i class="fab fa-linkedin"></i></a>
@@ -416,7 +416,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="member">
               <div class="pic"><img src="img/user.png" alt=""></div>
-              <h4>Layan Alfarisi</h4>
+              <h4>Layan Alfarsi</h4>
               <span>Legal Manager</span>
               <div class="social">
                 <a href="https://www.linkedin.com/in/layan-alfarsi-1b5a85241?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><i class="fab fa-linkedin"></i></a>
@@ -455,8 +455,8 @@
               <h3>Nasma</h3>
               <p>Get in touch with Nasma for any inquiries, support, or collaboration opportunities. Reach us via email, social media, or the contact form—we’re here to assist you.</p>
               <div class="social-links">
-                <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
+                <a href="https://x.com/nasma_ai" class="twitter"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.instagram.com/nasmasa_/" class="instagram"><i class="fab fa-instagram"></i></a>
                 <a href="#" class="linkedin"><i class="fab fa-linkedin"></i></a>
               </div>
             </div>
