--- a/index.html
+++ b/index.html
@@ -389,8 +389,8 @@
             <div class="member">
               <div class="pic"><img src="img/user.png" alt=""></div>
               <h4>Safa Khan</h4>
-              <span>Co-founder </span>
-              <span>Product Design Manager</span>
+              
+              <span>Co-founder & Product Design Manager</span>
               <div class="social">
              
                 <a href="https://www.linkedin.com/in/safa-khan-4a373b258/"><i class="fab fa-linkedin"></i></a>
