--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             <div class="member">
               <div class="pic"><img src="img/user.png" alt=""></div>
               <h4>Haneen Banjar</h4>
-              <span>Partner and Technical Consultant</span>
+              <span>Partner & Technical Consultant</span>
               <div class="social">
                 
                 <a href=""><i class="fab fa-linkedin"></i></a>
