--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
               <h3>Nasma</h3>
               <p>Get in touch with Nasma for any inquiries, support, or collaboration opportunities. Reach us via email, social media, or the contact form—we’re here to assist you.</p>
               <div class="social-links">
-                <a href="https://x.com/nasma_ai" class="twitter"><i class="fab fa-twitter"></i></a>
+                <a href="https://x.com/NasmaSa_" class="twitter"><i class="fab fa-twitter"></i></a>
                 <a href="https://www.instagram.com/nasmasa_/" class="instagram"><i class="fab fa-instagram"></i></a>
                 <a href="#" class="linkedin"><i class="fab fa-linkedin"></i></a>
               </div>
