--- a/index.html
+++ b/index.html
@@ -181,12 +181,18 @@
   <!--==========================
   Product Advanced Featuress Section
 ============================-->
+<!--==========================
+  Product Advanced Features Section
+============================-->
 <section id="advanced-features" style="text-align: center; padding: 100px 20px;">
   <div class="container">
-    <img src="img/soon.png" alt="Coming Soon" style="max-width: 300px; margin-bottom: 20px;">
-    <h2 style="font-size: 2.5rem;">Coming Soon</h2>
+    <div style="max-width: 600px; margin: 0 auto;">
+      <img src="img/soon.png" alt="Coming Soon" style="width: 100%; height: auto; display: block; margin: 0 auto;">
+    </div>
+    <h2 style="font-size: 2.5rem; margin-top: 20px;">Coming Soon</h2>
   </div>
 </section><!-- #advanced-features -->
+
 
     <!--==========================
       Call To Action Section
