--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 <section id="advanced-features" style="text-align: center; padding: 100px 20px;">
   <div class="container">
     <div style="max-width: 600px; margin: 0 auto;">
-      <img src="img/soon.png" alt="Coming Soon" style="width: 200%; height: auto; display: block; margin: 0 auto;">
+      <img src="img/soon2.jpeg" alt="Coming Soon" style="width: 200%; height: auto; display: block; margin: 0 auto;">
     </div>
     <h2 style="font-size: 4rem; margin-top: 20px;">Coming Soon</h2>
   </div>
