--- a/index.html
+++ b/index.html
@@ -181,8 +181,17 @@
   <!--==========================
   Product Advanced Featuress Section
 ============================-->
-
-<section id="advanced-features" style="text-align: center; padding: 100px 20px;">
+<!--==========================
+  Product Advanced Features Section
+============================-->
+<section id="advanced-features" style="
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  min-height: 100vh;
+  padding: 20px;
+">
   <div class="container">
     <div style="max-width: 600px; margin: 0 auto;">
       <img src="img/soon2.jpeg" alt="Coming Soon" style="width: 100%; height: auto; display: block; margin: 0 auto;">
