--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@
 ============================-->
 <!--==========================
   Product Advanced Features Section
+<!--==========================
+  Product Advanced Features Section
 ============================-->
 <section id="advanced-features" style="
   display: flex;
@@ -193,12 +195,13 @@
   padding: 20px;
 ">
   <div class="container">
-    <div style="max-width: 600px; margin: 0 auto;">
-      <img src="img/soon2.jpeg" alt="Coming Soon" style="width: 200%; height: auto; display: block; margin: 0 auto;">
+    <div style="max-width: 800px; margin: 0 auto;">
+      <img src="img/soon2.jpeg" alt="Coming Soon" style="width: 100%; height: auto; display: block; margin: 0 auto;">
     </div>
     <h2 style="font-size: 4rem; margin-top: 20px;">Coming Soon</h2>
   </div>
 </section><!-- #advanced-features -->
+
 
 
     <!--==========================
