--- a/index.html
+++ b/index.html
@@ -195,15 +195,12 @@
   padding: 20px;
 ">
   <div class="container">
-    <div style="max-width: 800px; margin: 0 auto;">
+    <div style="max-width: 90%; margin: 0 auto;">
       <img src="img/soon2.jpeg" alt="Coming Soon" style="width: 100%; height: auto; display: block; margin: 0 auto;">
     </div>
-    <h2 style="font-size: 4rem; margin-top: 20px;">Coming Soon</h2>
+    <h2 style="font-size: 5vw; margin-top: 20px;">Coming Soon</h2>
   </div>
 </section><!-- #advanced-features -->
-
-
-
     <!--==========================
       Call To Action Section
     ============================-->
