--- a/index.html
+++ b/index.html
@@ -188,13 +188,14 @@
 ============================-->
 <section id="advanced-features" style="
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
+  padding: 5vw 20px;
   min-height: 100vh;
-  padding: 20px;
 ">
-  <div class="container">
+  <div class="container" style="width: 100%; max-width: 1200px;">
     <div style="max-width: 90%; margin: 0 auto;">
       <img src="img/soon2.jpeg" alt="Coming Soon" style="width: 100%; height: auto; display: block; margin: 0 auto;">
     </div>
