--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-md-8">
-          <img class="advanced-feature-img wow fadeInRight" src="img/soon2.jpeg" alt="">
+          <img class="advanced-feature-img wow fadeInRight" src="img/soon3.png" alt="">
           <div class="wow fadeInLeft">
-            <h1 class="coming-soon-text">Coming Soon</h1>      
+                
           </div>
         </div>
       </div>
