--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-md-8">
-          <img class="advanced-feature-img wow fadeInRight" src="img/soon3.png" alt="">
+          <img class="advanced-feature-img wow fadeInRight" src="img/soon4.jpeg" alt="">
           <div class="wow fadeInLeft">
                 
           </div>
